<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.AddPostActivity"
    android:orientation="vertical"
    >
    <include layout="@layout/layout_toolbar"
        android:id="@+id/toolbarAddPostActivity"
        />
       <ScrollView
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           >

           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               >
               <ImageView
                   android:layout_alignParentTop="true"
                   android:id="@+id/imageViewAddPostActivityPostImage"
                   android:layout_width="match_parent"
                   android:layout_height="250dp"
                   android:scaleType="fitXY"
                   android:src="@color/colorPrimaryDark"
                   android:layout_alignParentLeft="true"
                   android:layout_alignParentRight="true"
                   />
               <ImageView
                   android:id="@+id/imageViewAddPostActivitySelectImage"
                   android:layout_width="100dp"
                   android:layout_height="100dp"
                   android:src="@drawable/ic_baseline_photo_camera_24"
                   android:layout_centerHorizontal="true"
                   android:layout_alignParentTop="true"
                   android:layout_marginTop="80dp"
                   android:clickable="true"
                   />

               <EditText
                   android:id="@+id/editTextAddPostActivityImageDescription"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_below="@id/imageViewAddPostActivityPostImage"
                   android:layout_marginLeft="20dp"
                   android:layout_marginTop="10dp"
                   android:layout_marginRight="20dp"
                   android:hint="@string/image_description" />

               <EditText
                   android:id="@+id/editTextAddPostActivityPostTitle"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_below="@id/editTextAddPostActivityImageDescription"
                   android:layout_marginLeft="20dp"
                   android:layout_marginTop="50dp"
                   android:layout_marginRight="20dp"
                   android:hint="@string/post_title" />

               <EditText
                   android:id="@+id/editTextAddPostActivityPostDescription"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_below="@id/editTextAddPostActivityPostTitle"
                   android:layout_marginLeft="20dp"
                   android:layout_marginTop="10dp"
                   android:layout_marginRight="20dp"
                   android:hint="@string/post_description" />
               <Button
                   android:id="@+id/buttonAddPostActivityPost"
                   android:layout_width="180dp"
                   android:layout_height="45dp"
                   android:background="@drawable/button_background"
                   android:text="Post"
                   android:textAllCaps="false"
                   android:textColor="@color/colorWhite"
                   android:textSize="20sp"
                   android:layout_below="@id/editTextAddPostActivityPostDescription"
                   android:layout_centerHorizontal="true"
                   android:layout_marginTop="40dp"
                   android:layout_marginBottom="30dp"
                   />

               <ProgressBar
                   android:id="@+id/progressBarAddPostActivity"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_centerInParent="true"
                   />
           </RelativeLayout>

       </ScrollView>

</LinearLayout>